--- a/settings.html
+++ b/settings.html
@@ -92,7 +92,8 @@
                 <input type="hidden" name="ref" value="ref" />
                 <input type="hidden" name="theme" value="theme" />
                 <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="instagram" type="instagram" placeholder="Instagram для интеграции"></span>
-		<span class="col-lg-11 col-md-6 col-sm-12 col-12">Ваш сайт ЛИЧНОГО БРЕНДА создается из вашего контента в Инстаграм, это поле ОБЯЗАТЕЛЬНОЕ.</span>
+		<span id="inst_comment" class="col-lg-11 col-md-6 col-sm-12 col-12">Ваш сайт ЛИЧНОГО БРЕНДА создается из вашего контента в Инстаграм, это поле ОБЯЗАТЕЛЬНОЕ.</span>
+		<span id="error" class="col-lg-11 col-md-6 col-sm-12 col-12"></span>
                 <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="email" type="email" placeholder="Email для заявок"></span>
 		<span class="col-lg-11 col-md-6 col-sm-12 col-12">Чтобы получать заявки с вашего сайта на почту, подтвердите свой Email. Для этого откройте указанную почту и пройдите по ссылке.</span>
                 <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="whatsapp" type="tel" placeholder="Введите WhatsApp"></span>
@@ -175,6 +176,7 @@ $(document).ready(function(){
                 }
                 window.location.href = redirect;
 	}).fail(function(){
+                $('#inst_comment').text('');
 		$('#error').text("Мы не нашли указанный Instagram");
 	});
 
