--- a/settings.html
+++ b/settings.html
@@ -91,7 +91,7 @@
 	    <form class="form-row" action="https://admapi.itsinsta.site/api/profiles" method="post">
                 <input type="hidden" name="ref" value="ref" />
                 <input type="hidden" name="theme" value="theme" />
-                <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="instagram" type="instagram" placeholder="Instagram для интеграции"></span>
+                <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="userName" type="instagram" placeholder="Instagram для интеграции"></span>
 		<span id="inst_comment" class="col-lg-11 col-md-6 col-sm-12 col-12">Ваш сайт ЛИЧНОГО БРЕНДА создается из вашего контента в Инстаграм, это поле ОБЯЗАТЕЛЬНОЕ.</span>
 		<span id="error" class="col-lg-11 col-md-6 col-sm-12 col-12"></span>
                 <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="email" type="email" placeholder="Email для заявок"></span>
