--- a/settings.html
+++ b/settings.html
@@ -147,7 +147,7 @@ function getFormData($form){
 $(document).ready(function(){
     var theme = getUrlParameter("theme");
     if (!theme) {
-       theme = "blue";
+       theme = "violet";
     }
     $('#demo').attr("src", "img/themes/" + theme + ".png");
     $("#theme").val(theme);
