--- a/settings.html
+++ b/settings.html
@@ -93,7 +93,7 @@
                 <input type="hidden" name="theme" value="theme" />
                 <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="userName" type="instagram" placeholder="Instagram для интеграции"></span>
 		<span id="inst_comment" class="col-lg-11 col-md-6 col-sm-12 col-12">Ваш сайт ЛИЧНОГО БРЕНДА создается из вашего контента в Инстаграм, это поле ОБЯЗАТЕЛЬНОЕ.</span>
-		<span id="error" class="col-lg-11 col-md-6 col-sm-12 col-12"></span>
+		<span id="error" style="color:red;" class="col-lg-11 col-md-6 col-sm-12 col-12"></span>
                 <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="email" type="email" placeholder="Email для заявок"></span>
 		<span class="col-lg-11 col-md-6 col-sm-12 col-12">Чтобы получать заявки с вашего сайта на почту, подтвердите свой Email. Для этого откройте указанную почту и пройдите по ссылке.</span>
                 <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="whatsapp" type="tel" placeholder="Введите WhatsApp"></span>
