--- a/settings.html
+++ b/settings.html
@@ -89,8 +89,8 @@
 			  <br><br><br>
               <!--<p class="buttond"  style="text-align:center;"><a href="https://www.instagram.com/lichnyjbrend/" target="_blank" style="cursor: pointer; font-size:17px;  text-decoration: none; padding:13px 20px; color:#ffffff; background-color:#46c732; border-radius:8px; border: 3px solid #;">ПОДПИСАТЬСЯ ДЛЯ ПОДТВЕРЖДЕНИЯ</a></p>-->
 	    <form class="form-row" action="https://admapi.itsinsta.site/api/profiles" method="post">
-                <input type="hidden" name="ref" value="ref" />
-                <input type="hidden" name="theme" value="theme" />
+                <input type="hidden" name="ref" id="ref" value="" />
+                <input type="hidden" name="theme" id="theme" value="" />
                 <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="userName" type="instagram" placeholder="Instagram для интеграции"></span>
 		<span id="inst_comment" class="col-lg-11 col-md-6 col-sm-12 col-12">Ваш сайт ЛИЧНОГО БРЕНДА создается из вашего контента в Инстаграм, это поле ОБЯЗАТЕЛЬНОЕ.</span>
 		<span id="error" style="color:red;" class="col-lg-11 col-md-6 col-sm-12 col-12"></span>
