--- a/settings.html
+++ b/settings.html
@@ -94,13 +94,13 @@
                 <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="userName" type="instagram" placeholder="Instagram для интеграции"></span>
 		<span id="inst_comment" class="col-lg-11 col-md-6 col-sm-12 col-12">Ваш сайт ЛИЧНОГО БРЕНДА создается из вашего контента в Инстаграм, это поле ОБЯЗАТЕЛЬНОЕ.</span>
 		<span id="error" style="color:red;" class="col-lg-11 col-md-6 col-sm-12 col-12"></span>
-                <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="email" type="email" placeholder="Email для заявок"></span>
-		<span class="col-lg-11 col-md-6 col-sm-12 col-12">Вы сможете получать заявки с вашего сайта на свой e-mail.</span>
+                <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="email" type="email" placeholder="E-mail для заявок"></span>
+		<span class="col-lg-11 col-md-6 col-sm-12 col-12">Вы сможете получать заявки с вашего сайта на почту.</span>
 		<!--<span class="col-lg-11 col-md-6 col-sm-12 col-12">Чтобы получать заявки с вашего сайта на почту, подтвердите свой Email. Для этого откройте указанную почту и пройдите по ссылке.</span>-->
-                <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="whatsapp" type="tel" placeholder="Введите WhatsApp"></span>
-                <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="viber" type="tel" placeholder="Введите Viber"></span>
-                <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="telegram" type="tel" placeholder="Введите Telegram"></span>
-                <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="site" type="tel" placeholder="Ваш сайт"></span>
+                <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="whatsapp" type="tel" placeholder="Ваш WhatsApp (опционально)"></span>
+                <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="viber" type="tel" placeholder="Ваш Viber (опционально)"></span>
+                <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="telegram" type="tel" placeholder="Ваш Telegram (опционально)"></span>
+                <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="site" type="tel" placeholder="Ваш сайт (опционально)"></span>
                 <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="btn btn-success" type="submit" value="Подтвердить"></span>
 <br/><br/>
             </form>
