--- a/settings.html
+++ b/settings.html
@@ -102,7 +102,7 @@
                 <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="telegram" type="tel" placeholder="Ваш Telegram (опционально)"></span>
                 <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="form-control" name="site" type="tel" placeholder="Ваш сайт (опционально)"></span>
                 <span class="col-lg-11 col-md-6 col-sm-12 col-12"><input class="btn btn-success" type="submit" value="Подтвердить"></span>
-<br/><br/>
+                <span class="col-lg-11 col-md-6 col-sm-12 col-12">&nbsp;</span>
             </form>
             </div>
             <div class="col-lg-5 col-md-5"><img id="demo" src="" /></div>
