--- a/settings.html
+++ b/settings.html
@@ -156,6 +156,8 @@ $(document).ready(function(){
     $("#ref").val(ref);
 
     $('form').submit(function(){
+        $('form .btn').prop('disabled', true);
+
 	event.preventDefault(); //prevent default action 
 
 	var username = $(this).find('input[name="userName"]').val();
@@ -180,6 +182,8 @@ $(document).ready(function(){
 	}).fail(function(){
                 $('#inst_comment').text('');
 		$('#error').text("Мы не нашли указанный Instagram");
+
+                $('form .btn').prop('disabled', false);
 	});
 
         return false;
