--- a/thanks.html
+++ b/thanks.html
@@ -132,7 +132,7 @@ $(document).ready(function(){
                 if (siteUrl) {
                     clearInterval(tid);
 
-                    $('#site').attr("href", siteUrl);
+                    $('#site').attr("href", siteUrl + "/links");
                     $('#site').removeAttr("style");
                 }
             });
