--- a/start.html
+++ b/start.html
@@ -3,7 +3,7 @@
 <html lang="Ru-ru">
 <head>
     <meta charset="UTF-8">
-    <title>Личный бренд старт</title>
+    <title>Личный бренд</title>
     
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1"/>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1"/>
