--- a/start.html
+++ b/start.html
@@ -101,7 +101,7 @@
       <main class="main-landing"><div class="container">
           <div class="short-description row">
             <div class="col-lg-6 col-md-6">
-              <h1>СОЗДАЙ СЕБЕ ЛИЧНЫЙ БРЕНД</h1>
+              <h1>ЛИЧНЫЙ БРЕНД СОЗДАЙ СЕБЕ САМ</h1>
               <h5>Обрети славу и популярность в интернет пространстве, благодаря своему личному бренду</h5>
               <p>Представляем новую онлайн платформу для продвижения блогеров, частных специалистов и предпринимателей в Google и Яндекс, благодаря вашему контенту в Инстаграм.</p>
               <br><br>
