--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="СДЕЛАЙ СЕБЕ ИМЯ!
-Онлайн платформа для самостоятельного продвижения ЛИЧНОГО БРЕНДА в Google и Яндекс, благодаря вашему контенту в Инстаграм. ЖМИ!
-👇">
+    <meta name="description" content="Здравствуйте! Меня Зовут Роман Большиянов, я основатель платформы ЛИЧНЫЙ БРЕНД.<br/><br/>
+Более 20 лет я занимаюсь бизнесом, 10 лет онлайн бизнесом, 5 лет я помогаю самым разным людям получать прибыль в Интернете и развивать свой ЛИЧНЫЙ БРЕНД. С 2016 года я помог клиентам создать более 1000 сайтов и вывести их самостоятельно в ТОП Яндекс и Google. Многие клиенты уже стали друзьями. Некоторые мои друзья зарабатывают более 1 миллиона в месяц при помощи моих онлайн сайтов.<br/><br/>
+Вы можете подключиться к моей самой совершенной разработке: ОНЛАЙН ПЛАТФОРМА ЛИЧНЫЙ БРЕНД ИЗ INSTAGRAM поможет вам обрести популярность в Яндекс и Google уже через несколько месяцев. Это полностью автоматизированый инструмент, который создаёт и продвигает ваш сайт. Вы даже не прикасаетесь к его настройке. Все произойдёт абсолютно автоматически. Вам нужно просто писать полезные публикации в своём Инстаграм, остальное сделаю я и платформа ЛИЧНЫЙ БРЕНД.<br/><br/>
+При помощи бесплатного тарифа вы сможете создать и продвигать сайт из 20 страниц.<br/>
+На тарифе за 200 рублей в месяц вы сможете создавать настоящий портал из своего Инстаграм и получать максимум для продвижения своего ЛИЧНОГО БРЕНДА.<br/><br/>
+ПРЯМО СЕЙЧАС НАЖМИТЕ ПОПРОБОВАТЬ И ПОЛУЧИТЕ СВОЙ БЕСПЛАТНЫЙ САЙТ ЛИЧНОГО БРЕНДА ЧЕРЕЗ ПЯТЬ МИНУТ">
     <meta name="keywords" content="личный бренд брендинг маркетолог пер сональный пример сайт полезное аналитика" />
 	<meta name="google-site-verification" content="Tc80rkeGlxPC3_0qxPVR6WMoHvuJbJhZenUpRwRs2UQ" />
 	<meta name="yandex-verification" content="46a02c8a176c60cf" />
@@ -43,9 +46,12 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="ЛИЧНЫЙ БРЕНД | ПЛАТФОРМА" />
-    <meta property="og:description" content="СДЕЛАЙ СЕБЕ ИМЯ!
-Онлайн платформа для самостоятельного продвижения ЛИЧНОГО БРЕНДА в Google и Яндекс, благодаря вашему контенту в Инстаграм. ЖМИ!
-👇" />
+    <meta property="og:description" content="Здравствуйте! Меня Зовут Роман Большиянов, я основатель платформы ЛИЧНЫЙ БРЕНД.<br/><br/>
+Более 20 лет я занимаюсь бизнесом, 10 лет онлайн бизнесом, 5 лет я помогаю самым разным людям получать прибыль в Интернете и развивать свой ЛИЧНЫЙ БРЕНД. С 2016 года я помог клиентам создать более 1000 сайтов и вывести их самостоятельно в ТОП Яндекс и Google. Многие клиенты уже стали друзьями. Некоторые мои друзья зарабатывают более 1 миллиона в месяц при помощи моих онлайн сайтов.<br/><br/>
+Вы можете подключиться к моей самой совершенной разработке: ОНЛАЙН ПЛАТФОРМА ЛИЧНЫЙ БРЕНД ИЗ INSTAGRAM поможет вам обрести популярность в Яндекс и Google уже через несколько месяцев. Это полностью автоматизированый инструмент, который создаёт и продвигает ваш сайт. Вы даже не прикасаетесь к его настройке. Все произойдёт абсолютно автоматически. Вам нужно просто писать полезные публикации в своём Инстаграм, остальное сделаю я и платформа ЛИЧНЫЙ БРЕНД.<br/><br/>
+При помощи бесплатного тарифа вы сможете создать и продвигать сайт из 20 страниц.<br/>
+На тарифе за 200 рублей в месяц вы сможете создавать настоящий портал из своего Инстаграм и получать максимум для продвижения своего ЛИЧНОГО БРЕНДА.<br/><br/>
+ПРЯМО СЕЙЧАС НАЖМИТЕ ПОПРОБОВАТЬ И ПОЛУЧИТЕ СВОЙ БЕСПЛАТНЫЙ САЙТ ЛИЧНОГО БРЕНДА ЧЕРЕЗ ПЯТЬ МИНУТ" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="lichnyjbrend" />
 
@@ -95,7 +101,7 @@
 						</div>
 						<div class="main-sec__txt-main">
 							<h1>ЛИЧНЫЙ БРЕНД | ПЛАТФОРМА</h1>
-							<p>СДЕЛАЙ СЕБЕ ИМЯ!<br/>Онлайн платформа для самостоятельного продвижения ЛИЧНОГО БРЕНДА в Google и Яндекс, благодаря вашему контенту в Инстаграм. ЖМИ!<br/>👇</p>
+							<p>Здравствуйте! Меня Зовут Роман Большиянов, я основатель платформы ЛИЧНЫЙ БРЕНД.<br/><br/><br/>Более 20 лет я занимаюсь бизнесом, 10 лет онлайн бизнесом, 5 лет я помогаю самым разным людям получать прибыль в Интернете и развивать свой ЛИЧНЫЙ БРЕНД. С 2016 года я помог клиентам создать более 1000 сайтов и вывести их самостоятельно в ТОП Яндекс и Google. Многие клиенты уже стали друзьями. Некоторые мои друзья зарабатывают более 1 миллиона в месяц при помощи моих онлайн сайтов.<br/><br/><br/>Вы можете подключиться к моей самой совершенной разработке: ОНЛАЙН ПЛАТФОРМА ЛИЧНЫЙ БРЕНД ИЗ INSTAGRAM поможет вам обрести популярность в Яндекс и Google уже через несколько месяцев. Это полностью автоматизированый инструмент, который создаёт и продвигает ваш сайт. Вы даже не прикасаетесь к его настройке. Все произойдёт абсолютно автоматически. Вам нужно просто писать полезные публикации в своём Инстаграм, остальное сделаю я и платформа ЛИЧНЫЙ БРЕНД.<br/><br/><br/>При помощи бесплатного тарифа вы сможете создать и продвигать сайт из 20 страниц.<br/><br/>На тарифе за 200 рублей в месяц вы сможете создавать настоящий портал из своего Инстаграм и получать максимум для продвижения своего ЛИЧНОГО БРЕНДА.<br/><br/><br/>ПРЯМО СЕЙЧАС НАЖМИТЕ ПОПРОБОВАТЬ И ПОЛУЧИТЕ СВОЙ БЕСПЛАТНЫЙ САЙТ ЛИЧНОГО БРЕНДА ЧЕРЕЗ ПЯТЬ МИНУТ</p>
 							<p>
 								<a href="./start.html"><b>ПОДРОБНЕЕ</b></a>
 							</p>
