--- a/start.html
+++ b/start.html
@@ -25,9 +25,9 @@
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png"/>
     <meta name="theme-color" content="#fff"/>
     <!--SEO-->
-    <meta name="description" content="Описание"/>
-    <meta name="keywords" content="Ключевые слова через запятую"/>
-    <!--Open Graph-->
+     <meta name="description" content="Личный бренд- это инновационная платформа для  создания оптимизированных сайтов из контента в Инстаграм, с целью продвижения бренда в интернет пространстве, которая использует автоматизированный алгоритм импорта и публикации контента автора на сайте и БЕСПЛАТНЫЙ конструктор страницы ссылок для Инстаграм, подходит для блогеров, мастеров и микробизнеса, даёт замечательный результат при микро усилиях и работает 24/7.">
+    <meta name="keywords" content="Личный бренд; создание личного бренда; развитие личного бренда; Продвижение личного бренда; личный бренд с нуля; персональный бренд" />
+   <!--Open Graph-->
     <!--<link rel="image_src" href="https://.../img/og/og.jpg"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://..."/>
@@ -475,6 +475,14 @@
               <iframe width="560" height="315" src="https://www.youtube.com/embed/N7te-eh6Yac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="reviews-slide__txt">МОСБИГ Отзыв об использовании платформы ЛИЧНЫЙ БРЕНД</div>
+          </div>       
+        </div>
+        <div class="swiper-slide">
+          <div class="reviews-slide">
+            <div class="reviews-slide__wrap">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/cP1t-bm8ERc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="reviews-slide__txt">Юлия Светлая Отзыв об использовании платформы ЛИЧНЫЙ БРЕНД</div>
           </div>       
         </div>
       </div>
