--- a/start.html
+++ b/start.html
@@ -482,7 +482,7 @@
             <div class="reviews-slide__wrap">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/cP1t-bm8ERc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="reviews-slide__txt">Юлия Светлая Отзыв об использовании платформы ЛИЧНЫЙ БРЕНД</div>
+            <div class="reviews-slide__txt">Архитектура Жизни Отзыв об использовании платформы ЛИЧНЫЙ БРЕНД</div>
           </div>       
         </div>
       </div>
