--- a/start.html
+++ b/start.html
@@ -2,7 +2,7 @@
 <html lang="Ru-ru">
   <head>
     <meta charset="UTF-8"/>
-    <title>Site Title</title>
+    <title>Сделай Себя Сам</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!--Favicons генератор https://www.favicon-generator.org/-->
@@ -25,7 +25,7 @@
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png"/>
     <meta name="theme-color" content="#fff"/>
     <!--SEO-->
-     <meta name="description" content="Личный бренд- это инновационная платформа для  создания оптимизированных сайтов из контента в Инстаграм, с целью продвижения бренда в интернет пространстве, которая использует автоматизированный алгоритм импорта и публикации контента автора на сайте и БЕСПЛАТНЫЙ конструктор страницы ссылок для Инстаграм, подходит для блогеров, мастеров и микробизнеса, даёт замечательный результат при микро усилиях и работает 24/7.">
+     <meta name="description" content="Личный бренд - это инновационная платформа для создания оптимизированных сайтов из контента в Инстаграм, с целью продвижения бренда в интернет пространстве, которая использует автоматизированный алгоритм импорта и публикации контента автора на сайте и БЕСПЛАТНЫЙ конструктор страницы ссылок для Инстаграм, подходит для блогеров, мастеров и микробизнеса, даёт замечательный результат при микро усилиях и работает 24/7.">
     <meta name="keywords" content="Личный бренд; создание личного бренда; развитие личного бренда; Продвижение личного бренда; личный бренд с нуля; персональный бренд" />
    <!--Open Graph-->
     <!--<link rel="image_src" href="https://.../img/og/og.jpg"/>
