--- a/start.html
+++ b/start.html
@@ -2,7 +2,7 @@
 <html lang="Ru-ru">
   <head>
     <meta charset="UTF-8"/>
-    <title>Сделай Себя Сам</title>
+    <title>СОЗДАЙ СЕБЯ САМ</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!--Favicons генератор https://www.favicon-generator.org/-->
@@ -346,20 +346,10 @@
       <div class="how-it-work__accordion">
         <div class="how-it-work__q" onclick="faqAccordion(this);"><span>В ссылке моего аккаунта Инстаграм уже стоит другой сайт, что делать?</span></div>
         <div class="how-it-work__txt">
-          <p>Если вы используете Тапс Линк или любой другой похожий сервис biolinks мы поможем вам создать в нашем конструкторе точно такую же страницу. Более того, вам не придётся платить за неё. Даже если вы решите не создавать Инстаграм портал ЛИЧНОГО БРЕНДА, эта страница будет бесплатной навсегда.</p>
-          <p>Другими словами, вам больше не нужно платить за страницу ссылок Тапс линк и похожих сервисов.</p>
+          <p>Если вы используете ТапЛинк или любой другой похожий сервис biolinks мы поможем вам создать в нашем конструкторе точно такую же страницу. Более того, вам не придётся платить за неё. Даже если вы решите не создавать Инстаграм портал ЛИЧНОГО БРЕНДА, эта страница будет бесплатной навсегда.</p>
+          <p>Другими словами, вам больше не нужно платить за страницу ссылок ТапЛинк и похожих сервисов.</p>
           <p>Если у вас стоит ссылка на корпоративный сайт, то вы ее сможете продублировать внутри нашей страницы Biolinks.</p>
           <p>Аналогичным образом дублируются ссылки на мессенджеры внутри страницы Biolinks.</p>
-        </div>
-      </div>
-      <div class="how-it-work__accordion">
-        <div class="how-it-work__q" onclick="faqAccordion(this);"><span>В ссылке моего аккаунта Инстаграм уже стоит другой сайт, что делать?</span></div>
-        <div class="how-it-work__txt">
-          <p>Если вы используете Тапс Линк или любой другой похожий сервис biolinks мы поможем вам создать в нашем конструкторе точно такую же страницу. Более того, вам не придётся платить за неё. Даже если вы решите не создавать Инстаграм портал ЛИЧНОГО БРЕНДА, эта страница будет бесплатной навсегда.</p>
-          <p>Другими словами, вам больше не нужно платить за страницу ссылок Тапс линк и похожих сервисов.</p>
-          <p>Если у вас стоит ссылка на корпоративный сайт, то вы ее сможете продублировать внутри нашей страницы Biolinks.</p>
-          <p>Аналогичным образом дублируются ссылки на мессенджеры внутри страницы Biolinks.</p>
-          <p>&nbsp;</p>
         </div>
       </div>
       <div class="how-it-work__accordion">
