--- a/settings.html
+++ b/settings.html
@@ -2,7 +2,7 @@
 <html lang="Ru-ru">
   <head>
     <meta charset="UTF-8"/>
-    <title>Сделай Себя Сам</title>
+    <title>СОЗДАЙ СЕБЯ САМ</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="robots" content="noindex" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
