--- a/thanks.html
+++ b/thanks.html
@@ -29,24 +29,24 @@
     <meta name="description" content="Личный бренд- это инновационная платформа для  создания оптимизированных сайтов из контента в Инстаграм, с целью продвижения бренда в интернет пространстве, которая использует автоматизированный алгоритм импорта и публикации контента автора на сайте и БЕСПЛАТНЫЙ конструктор страницы ссылок для Инстаграм, подходит для блогеров, мастеров и микробизнеса, даёт замечательный результат при микро усилиях и работает 24/7.">
     <meta name="keywords" content="Личный бренд; создание личного бренда; развитие личного бренда; Продвижение личного бренда; личный бренд с нуля; персональный бренд" />
     <!--Open Graph-->
-    <link rel="image_src" href="https://.../img/og/og.jpg"/>
+    <link rel="image_src" href="https://lichnyj-brend.ru/img/og/og.jpg"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://..."/>
-    <meta property="og:image" content="https://.../img/og/og.jpg"/>
+    <meta property="og:url" content="https://lichnyj-brend.ru/start.html"/>
+    <meta property="og:image" content="https://lichnyj-brend.ru/img/og/og.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="1024"/>
     <meta property="og:image:height" content="512"/>
-    <meta property="og:title" content="..."/>
-    <meta property="og:description" content="..."/>
+    <meta property="og:title" content="ЛИЧНЫЙ БРЕНД: СОЗДАЙ СЕБЯ САМ"/>
+    <meta property="og:description" content="Личный бренд - это инновационная платформа для создания оптимизированных сайтов из контента в Инстаграм, с целью продвижения бренда в интернет пространстве, которая использует автоматизированный алгоритм импорта и публикации контента автора на сайте и БЕСПЛАТНЫЙ конструктор страницы ссылок для Инстаграм, подходит для блогеров, мастеров и микробизнеса, даёт замечательный результат при микро усилиях и работает 24/7."/>
     <meta property="og:locale" content="Ru-ru"/>
-    <meta property="og:site_name" content="https://..."/>
+    <meta property="og:site_name" content="https://lichnyj-brend.ru"/>
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:site" content="https://..."/>
-    <meta name="twitter:title" content="..."/>
-    <meta name="twitter:description" content="..."/>
-    <meta name="twitter:creator" content="..."/>
-    <meta name="twitter:image:src" content="https://.../img/og/twitter.jpg"/>
-    <meta name="twitter:domain" content="https://...."/>
+    <meta name="twitter:site" content="https://lichnyj-brend.ru"/>
+    <meta name="twitter:title" content="ЛИЧНЫЙ БРЕНД: СОЗДАЙ СЕБЯ САМ"/>
+    <meta name="twitter:description" content="Инновационная платформа для создания оптимизированных сайтов из контента в Инстаграм, с целью продвижения бренда в интернет пространстве, которая использует автоматизированный алгоритм импорта и публикации контента автора на сайте и БЕСПЛАТНЫЙ конструктор страницы ссылок для Инстаграм."/>
+    <meta name="twitter:creator" content="lichnyj-brend.ru"/>
+    <meta name="twitter:image:src" content="https://lichnyj-brend.ru/img/og/og.jpg"/>
+    <meta name="twitter:domain" content="https://lichnyj-brend.ru"/>
     <!--Цветовое оформление окон браузеров-->
     <meta name="theme-color" content="#272c7e"/>
     <meta name="msapplication-navbutton-color" content="#272c7e"/>
